--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,3 +81,10 @@
 body {
   overscroll-behavior: contain;
 }
+
+/* isso na parte do desenho atrapalha muito */
+*{
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
