--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,8 +83,8 @@ body {
 }
 
 /* isso na parte do desenho atrapalha muito */
-*{
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */
-}
+/* *{
+  -webkit-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none; 
+} */
